Support map gesture
Support map gestures: zoom and drag.
Display the current postion with a narrow.

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>MainForm.ui.qml</file>
+        <file>icon/location.svg</file>
     </qresource>
 </RCC>
