Clean the route
Add clean button to Clean the route on the map.
Clean the old map before loading the new map.

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>MainForm.ui.qml</file>
         <file>icon/myLocation.svg</file>
         <file>icon/routes.svg</file>
+        <file>icon/cleanRoute.png</file>
     </qresource>
 </RCC>
