--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>icon/myLocation.svg</file>
         <file>icon/routes.svg</file>
         <file>icon/cleanRoute.png</file>
+        <file>MapComponet.qml</file>
     </qresource>
 </RCC>
