Add new feature: direct to the destination
In recording mode,
Popup a dialog to set the coordination of the destination.
Show a red line from the current location to the destination.

--- a/qml.qrc
+++ b/qml.qrc
@@ -13,5 +13,7 @@
         <file>icon/recordResume.png</file>
         <file>icon/scale.png</file>
         <file>icon/scale_end.png</file>
+        <file>icon/wppArrow.png</file>
+        <file>icon/destFlag.png</file>
     </qresource>
 </RCC>
